--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 	<br>
 	<div class="container-fluid section" id="section2">
 		<div class="vertical-center">
-			<h1>What I'm doing</h1>
+			<h1>What I'm Doing  <i class="fa fa-cubes" aria-hidden="true"></i></h1>
 			<p></p>
 			<ul id="current">
 				<li>
@@ -130,7 +130,7 @@
 	<br>
 	<div class="container-fluid section" id="section3">
 		<div class="vertical-center">
-			<h1>What I've done</h1>
+			<h1>What I've Done <i class="fa fa-th-list" aria-hidden="true"></i></h1>
 			<ul id="past">
 				<li>
 					<h3>SIUC <a href="http://students.sae.org/cds/formulaseries/">Formula
@@ -207,7 +207,7 @@
 	<br>
 	<div class="container-fluid section" id="section4">
 		<div class="vertical-center">
-			<h1>Contact Me</h1>
+			<h1>Contact Me <i class="fa fa-envelope-o" aria-hidden="true"></i></h1>
 			<div class="col-md-8">
 				<p>Whether it's a business inquiry, an issue or suggestion related to this
 				site, or a quick hello, I'd love to hear from you. Fill out the form below
